app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the top of the
 * compiled file, but it's generally better to create a new file per style scope.
 *
 *= require_self
 *= require_tree .
*/

$lightBlue: #0D6C8C;
$darkBlue: #020031;

.small-margin {
  margin: 10px;
}

.medium-margin {
  margin: 30px;
}

.left-padding {
  padding-left: 20px;
}

.medium-image {
  width: 300px;
  height: 100%;
}

/* overview */

.banner {
  position: relative;
  padding-top: 40px;
  color: white;
  text-align: center;
  text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.4), 0px 0px 30px rgba(0, 0, 0, 0.075);
  background: #020031; /* Old browsers */
  background: linear-gradient(45deg, $darkBlue 0%, $lightBlue 100%) repeat scroll 0% 0% transparent;

  .container {
    position: relative;
    z-index: 2;
  }

  p {
    font-size: 24px;
    font-weight: 300;
    line-height: 1.25;
    margin-bottom: 20px;
  }

  h1 {
    font-size: 80px;
    font-weight: bold;
    letter-spacing: -1px;
    line-height: 1;
  }

  img {
    margin: 10px;
    width: 600px;
    height: 100%;
  }
}

/* sidebar */

.affix {
  top: 25px;
}

.sidebar {
  margin: 30px 0px;
  background-color: #fff;
  -webkit-border-radius: 6px;
  -moz-border-radius: 6px;
  border-radius: 6px;
  -webkit-box-shadow: 0 1px 4px rgba(0,0,0,.065);
  -moz-box-shadow: 0 1px 4px rgba(0,0,0,.065);
  box-shadow: 0 1px 4px rgba(0,0,0,.065);

  li > a {
    display: block;
    margin: 0px 0px -1px;
    padding: 8px 14px;
    border: 1px solid rgb(229, 229, 229);
  }

  li:first-child > a {
    border-radius: 6px 6px 0px 0px;
  }

  li:last-child > a {
    border-radius: 0px 0px 6px 6px;
  }

  .icon-chevron-right {
    float: right;
    margin-top: 2px;
    margin-right: -6px;
    opacity: .25;
  }
}

/* Home Page */

.home {
  margin-top: 30px;
  
  p {
    font-size: 18px;
  }
}

.contents {
  margin-top: 30px;
  text-align: center;

  a, h1 {
    color: #5a5a5a;
  }

  h1 {
    font-size: 60px;
    font-weight: 200;
    line-height: 1;
    letter-spacing: -1px;
  }

  .byline {
    margin-bottom: 20px;
    font-size: 20px;
    font-weight: 300;
    line-height: 1.25;
    color: #999;
  }

  h3 {
    font-weight: 200;
    margin-bottom: 5px;
  }

  p {
    font-size: 16px;
    line-height: 1.5;
  }
}

.carousel-caption {
  a {
    margin: 10px 0 0 0;
  }
}

/* Pages */

section {
  margin-top: 20px;

  .row {
    margin-bottom: 20px;
  }
}

.page-banner {
  background: #020031; /* Old browsers */
  background: linear-gradient(45deg, $darkBlue 0%, $lightBlue 100%) repeat scroll 0% 0% transparent;
  border-radius: 70px;

  color: white;
  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);

  h1 {
    padding-top: 20px;
  }

  ul {
    font-size: 20px;
    padding-bottom: 20px;
  }

  h1, ul {
    padding-left: 40px;
  }

  img {
    width: 250px;
    padding: 10px;
  }

}

